--- a/blog/笔记/前端资源汇总.md
+++ b/blog/笔记/前端资源汇总.md
@@ -7,7 +7,7 @@
     - [JavaScript专题 —— 冴羽](https://github.com/mqyqingfeng/Blog)
     - [读Zepto源码](https://github.com/yeyuqiudeng/reading-zepto)
     - [Airbnb JavaScript风格指南](https://github.com/sivan/javascript-style-guide)
-    - [JavaScript轻量级函数式编程](https://github.com/ikcamp/Functional-Light-JS) 
+    - [JavaScript轻量级函数式编程](https://github.com/ikcamp/Functional-Light-JS)
     - [You-Dont-Need-JavaScript](https://github.com/you-dont-need/You-Dont-Need-JavaScript)
     - [You-Dont-Need-Lodash-Underscore](https://github.com/you-dont-need/You-Dont-Need-Lodash-Underscore)
     - [You-Dont-Need-jQuery](https://github.com/nefe/You-Dont-Need-jQuery/blob/master/README.zh-CN.md)
@@ -22,7 +22,7 @@
     - [node-interview](https://github.com/ElemeFE/node-interview/tree/master/sections/zh-cn) 2-3年经验的node服务端程序猿应该掌握的知识
 - 前端
     - [前端入门总结](https://github.com/qiu-deqing/FE-learning)
-    - [Resources-Front-End-Beginner](https://github.com/thedaviddias/Resources-Front-End-Beginner) 
+    - [Resources-Front-End-Beginner](https://github.com/thedaviddias/Resources-Front-End-Beginner)
     - [Front-End-Checklist](https://github.com/JohnsenZhou/Front-End-Checklist#javascript) 前端开发清单
     - [Coder-Knowledge-Management](https://github.com/wxyyxc1992/Coder-Knowledge-Management) 程序员的知识管理：技术视野、知识管理与职业规划
     - [Frontend Knowledge Structure](https://github.com/JacksonTian/fks) 前端知识结构
@@ -35,15 +35,22 @@
 
 ## 实战
 
-- [ProgrammingProjectList](https://github.com/jobbole/ProgrammingProjectList) 
+- [codewars](https://www.codewars.com)
+- [exercism.io](https://github.com/exercism/exercism.io) 提供了超过三十种编程语言的数百个实践问题，以帮助开发者在实践中学习并且掌握某个编程语言
+- [ProgrammingProjectList](https://github.com/jobbole/ProgrammingProjectList)
 - [awesome-practise-project](https://github.com/phodal/awesome-practise-project)
 - [JavaScript30](https://github.com/wesbos/JavaScript30)
+- [从零开始构建JavaScript技术栈](https://github.com/yepbug/js-stack-from-scratch)
 - python
     - [show-me-the-code](https://github.com/Yixiaohan/show-me-the-code) Python练习册
     - [500lines](https://github.com/aosabook/500lines) Python练习
 
 ## 工具
 
+- **前端开发必备**
+    - SCSS转CSS
+    - 代码检测工具 ESLint
+    - ES6转ES5: babel
 - [lambda-view](https://github.com/Jianru-Lin/lambda-view) 查看源码
 - [giab](https://github.com/simongfxu/giab) 在markdown文件中生成issue列表
 - [docsify](https://github.com/QingWei-Li/docsify)
@@ -56,18 +63,18 @@
 - [Front-end-Web-Development-Interview-Question](https://github.com/paddingme/Front-end-Web-Development-Interview-Question) 前端开发面试题大收集
 - [ResumeSample](https://github.com/geekcompany/ResumeSample) 程序猿简历模板
 - [面试可用问题](https://github.com/Twipped/InterviewThis)
-
-
+- [资深面试官教你面试技巧](https://zhuanlan.zhihu.com/p/30569804)
+- [awesome-interview-questions](https://github.com/MaximAbramchuck/awesome-interview-questions#cassandra)
 
 ## 资源
 
 - [amix/vimrc](https://github.com/amix/vimrc) 轻量级vim配置
 - [Awesome list](https://github.com/sindresorhus/awesome)
-- [Awesome APIs](https://github.com/TonnyL/Awesome_APIs) 
+- [Awesome APIs](https://github.com/TonnyL/Awesome_APIs)
 - [Awesome Github](https://github.com/AntBranch/awesome-github)
-- [awesome-micro-npm-packages](https://github.com/parro-it/awesome-micro-npm-packages) 
+- [awesome-micro-npm-packages](https://github.com/parro-it/awesome-micro-npm-packages)
 - [awesome-npm](https://github.com/sindresorhus/awesome-npm)
-- [awesome-github-vue](https://github.com/opendigg/awesome-github-vue) 
+- [awesome-github-vue](https://github.com/opendigg/awesome-github-vue)
 - [awesome-programming-books](https://github.com/jobbole/awesome-programming-books)
 - [awesome-python-cn](https://github.com/jobbole/awesome-python-cn)
 - [awesome-javascript-cn](https://github.com/jobbole/awesome-javascript-cn)
@@ -75,13 +82,13 @@
 - [awesome-nodejs](https://github.com/sindresorhus/awesome-nodejs)
 - [awesome-vue](https://github.com/vuejs/awesome-vue)
 - [Front end collect](https://github.com/foru17/front-end-collect) 前端开发相关的优秀网站、博客、以及活跃开发者
-- [优质的中文前端博客](https://github.com/FrankFang/best-chinese-front-end-blogs) 
+- [优质的中文前端博客](https://github.com/FrankFang/best-chinese-front-end-blogs)
 - [head清单](https://github.com/Amery2010/HEAD)
 - [Web前端常用插件](https://github.com/iamjoel/front-end-plugins)
 - [Awsome-Front-End-learning-resource](https://github.com/helloqingfeng/Awsome-Front-End-learning-resource) 前端资源汇总
 - [github-FE-project](https://github.com/hawx1993/github-FE-project)
 - [gold-miner](https://github.com/xitu/gold-miner) 掘金翻译计划
-
+- [free-programming-books-zh_CN](https://github.com/justjavac/free-programming-books-zh_CN)
 
 
 
