--- a/blog/笔记/前端资源汇总.md
+++ b/blog/笔记/前端资源汇总.md
@@ -21,6 +21,7 @@
     - [nodebestpractices](https://github.com/i0natan/nodebestpractices) Node最佳实践
     - [node-interview](https://github.com/ElemeFE/node-interview/tree/master/sections/zh-cn) 2-3年经验的node服务端程序猿应该掌握的知识
 - 前端
+    - [html/css编码规范](http://codeguide.bootcss.com)
     - [前端入门总结](https://github.com/qiu-deqing/FE-learning)
     - [Resources-Front-End-Beginner](https://github.com/thedaviddias/Resources-Front-End-Beginner)
     - [Front-End-Checklist](https://github.com/JohnsenZhou/Front-End-Checklist#javascript) 前端开发清单
@@ -49,8 +50,8 @@
 
 - **前端开发必备**
     - SCSS转CSS
-    - 代码检测工具 ESLint
-    - ES6转ES5: babel
+    - 代码检测工具ESLint
+    - ES6转ES5:babel
 - [lambda-view](https://github.com/Jianru-Lin/lambda-view) 查看源码
 - [giab](https://github.com/simongfxu/giab) 在markdown文件中生成issue列表
 - [docsify](https://github.com/QingWei-Li/docsify)
